# Pomodoro-widget

./: CMakeLists.txt  README.md  main.cpp  pomodoro.cpp  pomodoro.h
